--- a/index.html
+++ b/index.html
@@ -1,2 +1,60 @@
 <!DOCTYPE html>
-<h1>Привет</h1>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Table</title>
+        <style>
+            table {
+                border-collapse: collapse;
+                border: 1px solid black;
+            }
+            tr, th, td{
+                border: 1px solid black;
+            }
+        </style>
+    </head>
+    <body>
+        <table>
+        <tr>
+            <th>Album</th>
+            <th>Year</th>
+        </tr>
+        <tr>
+            <td>Transmittion</td>
+            <td>1993</td>
+        </tr>
+        <tr>
+            <td>Luciana</td>
+            <td>1994</td>
+        </tr>
+        <tr>
+            <td>Beyond the Infinite</td>
+            <td>1995</td>
+        </tr>
+        <tr>
+            <td>Bible of Dreams</td>
+            <td>1997</td>
+        </tr>
+        <tr>
+            <td>Shango</td>
+            <td>2000</td>
+        </tr>
+        <tr>
+            <td>Labyrunth</td>
+            <td>2004</td>
+        </tr>
+        <tr>
+            <td>Gods & Monsters</td>
+            <td>2008</td>
+        </tr>
+        <tr>
+            <td>Inside The Reactor</td>
+            <td>2011</td>
+        </tr>
+        <tr>
+            <td>The Golden Sun Of The Great East</td>
+            <td>2013</td>
+        </tr>
+        </table>
+    </body>
+</html>
