--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <textarea name="story" cols="50" rows="5" maxlenght="300" placeholder="Не более 300 символов ..."></textarea></li>
            </ul>
             <h2>Выберете дизайн сандалей:</h2>
-            <p>Характеристики</p>
+            <p>Характеристики</p>ву
             <ul>
                 <li>Цвет <i>(выберете один пункт):</i>
                     <ul>
