--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <form action="http://rightman.p.ht/lwd/contest.php" method="POST">
             <h1>Форма заказа "Сандали"</h1>
             <p>Хотите преобрести также сандали, которых ни у кого нет? Закажите обувь у <i>нас</i> - и вам будут завидовать все окружающие!</p>
-            <p>Сведения о заказчике</p>
+            <fieldset>
+            <legend>Сведения о заказчике</legend>
             <ul>
                 <li>Имя: <input type="text" name="name" ></li>
                 <li>Email: <input type="email" name="email"></li>
                 <li>Телефон: <input type="tel" name="phone"></li>
                 <li>Я хочу такие сандали, потому что...<br>
                 <textarea name="story" cols="50" rows="5" maxlenght="300" placeholder="Не более 300 символов ..."></textarea></li>
-           </ul>
+            </ul>
+            </fieldset>
             <h2>Выберете дизайн сандалей:</h2>
             <p>Характеристики</p>ву
             <ul>
