--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>Form</title>
-        <style>
-            li{
-                list-style-type: none;
-            }
-        </style>
+        <title>Задача 10</title>
+        <meta charset="utf-8">
+        <link href="styles/styles.css" rel="stylesheet">
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;700&display=swap" rel="stylesheet"> -->
     </head>
     <body>
-        <form action="http://rightman.p.ht/lwd/contest.php" method="POST">
-            <h1>Форма заказа "Сандали"</h1>
-            <p>Хотите преобрести также сандали, которых ни у кого нет? Закажите обувь у <i>нас</i> - и вам будут завидовать все окружающие!</p>
-            <fieldset>
-            <legend>Сведения о заказчике</legend>
-            <ul>
-                <li>Имя: <input type="text" name="name" ></li>
-                <li>Email: <input type="email" name="email"></li>
-                <li>Телефон: <input type="tel" name="phone"></li>
-                <li>Я хочу такие сандали, потому что...<br>
-                <textarea name="story" cols="50" rows="5" maxlenght="300" placeholder="Не более 300 символов ..."></textarea></li>
-            </ul>
-            </fieldset>
-            <h2>Выберете дизайн сандалей:</h2>
-            <p>Характеристики</p>ву
-            <ul>
-                <li>Цвет <i>(выберете один пункт):</i>
-                    <ul>
-                        <li><input type="radio" name="color" value="red">Красный</li>
-                        <li><input type="radio" name="color" value="blue">Синий</li>
-                        <li><input type="radio" name="color" value="black">Черный</li>
-                        <li><input type="radio" name="color" value="silver">Серебрянный</li>
-                    </ul>
-                </li>
-                
-            </ul>
-        
-        </form>
+        <h1>Блог Бистро "Черный Гусь"</h1> 
+           <nav>
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Меню</a></li>
+                    <li><a href="#">Блог</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <header>
+                <h2>Летнее меню</h2>
+                <p>Разместил Игорь, 15 июня 2013</p>
+                <p>Наш шеф-повар потратил немало времени, составляя идеальное меню для летнего се­ зона. Приходите к нам теплыми летними ве­ черами и наслаждайтесь закусками и основ­ ными блюдами.</p>
+            </header>
+        <h3>Закуски</h3>
+            <article>Колбаски</article>
+                <blockquote>Эльзасские колбаски из свиного окоро­ ка с черным перцем, луком и кориандром. <span id="text_italic">435 руб</span>.</blockquote>
+            <article>Расколбас - <span id="text_italic">Новинка!</span></article>
+                <blockquote>Ассорти из колбасок с картофельным пюре, тушеной капусткой, картофелем фри, горчи­ цей и кетчупом. <span id="text_italic">1450 руб</span>.</blockquote>
+        <h3>Основные блюда</h3>
+            <article>Лосось на углях в устричном соусе</article>
+                <blockquote>Также подается тонкий лаваш, салат из ма­ ринованной капустки, зелень, классический соус. <span id="text_italic">700 руб</span>.</blockquote>
+            <article>Шашлычки с тигровой креветкой -- <span id="text_italic">Новинка!</span></article>
+                <blockquote>Тигровые креветки, помидорки Черри, соус терияки. <span id="text_italic">720 руб</span>.</blockquote>
+        <h2>Вакуумные деликатесы</h2>
+        <p>Разместил Игорь, 15 ноября, 2012</p>
+        <p>На этой неделе мне <em>особенно</em> хочется поделиться с вами новым способом приготовления пищи <i>B вакууме</i>. Готовя пищу <i>B вакууме</i>,
+        вы помещаете продукт (обычно в вакуумной пластиковой упаковке) в емкость с водой той температуры, в которой вы собираетесь этот продукт готовить. Джеф Поттер в книге Кухня для фанатов описывает эту технику, как <q>BapKa при очень низкой температуре</q>.</p>
+        <p>В следующем месяце в нашем бистро бу­ дет подаваться <b>лосось под чесночно­ сливочным соусом, приготовленный в вакуу- ме</b>. Зарезервировать столик можно до 30 ноября. </p>
+        <p>blackgoose@example.com 555-336-1800</p>
+        <p><cite>Внимание: Лосось в вакууме не под­ вергается пастеризации. Не рекомендуется беременным женщинам и людям с ослабленным иммунитетом.</cite></p>
+        <p><cite>Наш адрес: Рязань, ул. Электровольтная, 17, Часы работы: С понедельника по четверг с 11 до 21, в пятницу и субботу: с 11 до полуночи</cite></p>
+        Все права защищены &сору; 2013, бистро "Черный гусь"
     </body>
 </html>
